Fixed issue with skeleton loader not showing

--- a/apps/ucp-ui/src/Demo/demo.module.css
+++ b/apps/ucp-ui/src/Demo/demo.module.css
@@ -5,9 +5,9 @@
   width: 100%;
 }
 
-.iframeDimensionContainer {
-  height: 600px;
-  width: 500px;
+.phoneDimensionsContainer {
+  width: 415px;
+  height: 852px;
 }
 
 .iframe {
